[tool.poetry]
name = "dash-revived"
version = "0.1.0"
description = "Discord bot for the Official FTB Wiki, take two."
authors = ["Tomodachi94 <tomodachi94@pm.me>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
"discord.py" = "^1.7.0"
pywikibot = "^6.0.1"

[tool.poetry.dev-dependencies]
poetry = "^1.1.5"
black = "^20.8b1"

[tool.black]
line-length = 79
target-version = ['py39']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
